add js and style

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -2,21 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="public/css/main.css">
+    <script src="public/js/main.js"></script>
 </head>
 <body>
-<div>
-    TEST TEST TEST
+<div class="test">
+    <div>html5</div>
+
+    <div class="x">Zadanie <strong>rekrutacyjne</strong></div>
 </div>
 <div>
-    TEST TEST TEST
+    Nagłówek H1
 </div>
 <div>
-    TEST TEST TEST
+    <div>
+        <div>BLOK PIERWSZY</div>
+        <div>
+            <div>
+                <input type="radio" id="huey" name="drone" value="huey" checked />
+                <label for="huey">Huey</label>
+            </div>
+            <div>
+                <input type="radio" id="dewey" name="drone" value="dewey" />
+                <label for="dewey">Dewey</label>
+            </div>
+
+            <div>
+                <input type="radio" id="louie" name="drone" value="louie" />
+                <label for="louie">Louie</label>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div>BLOK DRUGI</div>
+        <div>
+            <button>ZASTĄP</button>
+            <button>DOKLEJ</button>
+
+        </div>
+    </div>
+    <div>
+        <div>BLOK Z DŁUGĄ NAZWA KTÓRA SAMA SIE PRZYTNIE</div>
+        <div>
+
+        </div>
+    </div>
 </div>
-<div>
-    TEST TEST TEST
-</div>
+<footer>
+    <div>CSS IS AWESOME</div>
+    <div>nabthat</div>
+    <div>POKAŻ</div>
+</footer>
+
 
 </body>
 </html>
